# javascriptmusic

./: .gitignore  .travis.yml  AGENTS.md  LICENSE-WITHOUT-YOSHIMI  README.md  ROADMAP.md  drumtrack.js  package-lock.json  package.json  playback.js  record.js  recording.json  runosx.sh  startjack.sh  test.xmz  testmidi.js  testpattern.js  testpattern2.js  testpattern3.js  testpattern4.js  trackerpatterntest.js  tsconfig.json
.devcontainer/: Dockerfile  README.md  devcontainer.json  post-create.sh
.github/workflows/: macos-build.yml  main.yml  release.yml
4klang/: .gitignore  4klang.asm  4klang.h  4klang.inc  4klang.inc.js  4klangrender.c  LICENSE_4klang  README.md  buildwindowsexe.sh  computefunctionhash.js  convertinstrs.sh  createnotes.js  livereload.js  notes.inc  run.sh  runlinux.sh  tiny.asm
4klang/4klang_inc/: 4klang_inc.make.js  pattern_tools.js
4klang/instruments/: BA_Dark.inc  BA_DarkChorus.inc  BA_Deepness.inc  BA_DirectPunchMS.inc  BA_Mighty.inc  BA_Mighty_Feedback.inc  BA_NotFromThisWorld.inc  BA_NotFromThisWorld2.inc  BA_SawBass.inc  BA_SawBassFlanger.inc  GA_RestInPeaceMS.inc  KY_GarageOrgan.inc  KY_GarageOrganChorus.inc  KY_Lullaby.inc  KY_Lullaby2.inc  KY_Rhodes.inc  LD_AlphaOmegaMS.inc  LD_Farscape.inc  LD_More&MoreMS.inc  LD_Morpher.inc  LD_RestInPeaceMS.inc  LD_Short&PunchyMS.inc  PA_Fairies.inc  PA_Jarresque.inc  PA_JarresqueChorus.inc  PA_LoFiChoir.inc  PA_LongPad.inc  PA_Minorium.inc  PA_Strangeland.inc  PA_StrangelandChorus.inc  PA_SynastasiaMS.inc  SY_RandomArp.inc  SY_RandomArpFlanger.inc  airy.inc  basedrum.inc  basedrum2.inc  basedrum3.inc  basedrum4.inc  bass.inc  bass2.inc  (+23 more)
4klang/songs/: .gitignore  cfs.inc.js  grooveisinthecode.inc.js  new.inc.js  shuffle.inc.js
4klang/tools/: .gitignore  BA_DarkChorus.4ki  compile.sh  instrumentdisassembler.cpp  instrumentdisassembler.h  pOWL_BAS_Dubstep03.4ki  pOWL_BAS_Dubstep07.4ki
dawplugin/: .gitignore  CMakeLists.txt  INSTALLATION.md  README.md  WasmEdgeSynth.cpp  WebAssemblyMusicSynth.cpp
docs/presentations/: ifc2026-plan.md  ifc2026-slides.md
examples/beachdrive/: README.md  song.js  synth.ts
examples/dx7/: README.md  dx7-sequence.js  dx7-synth-asc-backend.ts  dx7-synth.ts  parse-rom.js  sequence-to-patches.js
examples/master_me/: README.md  master_me-synth.ts
midi/: output.js  recorder.class.js  recorder.js
pattern/: pattern.class.js  recordconverter.js  recordedpattern.class.js  trackerpattern.class.js
pattern/playable/: arpeggiato1.js  basepattern.js  drumpattern.js
recordings/: recording1.js  recording2.json  recording3.json  recording4.json  take1.json
songs/: base2.json  feelgoodplace1.js  feelgoodplace1.xmz  fgtake1.json  lead.json  livesong.js  rec1.json  recbase.json  recorded.js  recorded2.js  recorded3.js  recording_take1.json  rhodes1.json  upbeat.js  upbeat.xml  upbeat.xmz  upbeatchorus.json  upbeatintrolead.js  upbeatintrolead.json  yoshimibrowsertest.js
tools/: livecodingscheduler.js
tools/claude-bridge/: .gitignore  README.md  package-lock.json  package.json  relay.js
tools/faust2as/: README.md  faust-assemblyscript-integration-findings.md  faust2as.js  faust2asc.js  generate-test-sources.js  package-lock.json  package.json
tools/faustwasm-rs-package/: .gitignore  README.md  package.json  provenance.json  update-wasm.sh
tools/shadertest/: render.mjs
wasmaudioworklet/: .gitignore  ANIMATIONS.md  README.md  _headers  app.html  app.html.js  app.js  app.spec.js  audioworkletnode.js  audioworkletnode.spec.js  audioworkletpolyfill.js  audioworkletprocessor.js  claude-bridge-client.js  codemirror-monokai.css  devserver.js  editorcontroller.js  editorcontroller.spec.js  emptysong.js  index.html  karma.conf.cjs  login.html  modaudioworkletprocessor.js  near-git-sw.js  opfs-export.html  overview.plantuml  package-lock.json  package.json  pattern_tools.js  playwright.config.js  rollup-config-songcompiler.js  soundcloudplayalong.html  soundcloudplayalong.js  style.css  test.wat  testaudioworklet.js  testprocessors.js  web-test-runner.config.js  webserver.js
wasmaudioworklet/analyser/: levelanalyser.spec.js  (+2 more)
(+286 files in other folders)
